--- a/syncthing/Makefile
+++ b/syncthing/Makefile
@@ -15,7 +15,7 @@ PKG_GOGET:=github.com/syncthing/syncthing
 GOPKG_SOURCE=GO_$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.bz2
 
 #!!! uncomment PKG_SOURCE to download fixed version
-#PKG_SOURCE=$(GOPKG_SOURCE)
+PKG_SOURCE=$(GOPKG_SOURCE)
 PKG_COMMIT=f0f79a3e3e861b79da2b09f563e9d373255419f0
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(BUILD_VARIANT)/$(PKG_NAME)-$(PKG_VERSION)
