easy compile fixes

--- a/dnscrypt-proxy2/Makefile
+++ b/dnscrypt-proxy2/Makefile
@@ -15,7 +15,7 @@ PKG_GOGET:=github.com/jedisct1/dnscrypt-proxy
 GOPKG_SOURCE=GO_$(PKG_NAME)-$(PKG_VERSION)-$(PKG_RELEASE).tar.bz2
 
 #!!! uncomment PKG_SOURCE to download fixed version
-PKG_SOURCE=$(GOPKG_SOURCE)
+#PKG_SOURCE=$(GOPKG_SOURCE)
 PKG_COMMIT=a8045e0a7a34d358a806e0fea1a10cab315ab12a
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)-$(BUILD_VARIANT)/$(PKG_NAME)-$(PKG_VERSION)
